--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
+                <configuration>                
+                    <environmentVariables>                        
+                    </environmentVariables>
+                    <image>
+                        <name>${project.artifactId}:latest</name>
+                    </image>                                  
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
