--- a/kube/service-ingress.yaml
+++ b/kube/service-ingress.yaml
@@ -16,5 +16,5 @@ kind: Mapping
 metadata:
   name: datagrid-backend
 spec:
-  prefix: /hazelcast/
+  prefix: /datagrid/
   service: datagrid-service-ingress
