--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>it.poste.hazelcast</groupId>
@@ -15,7 +15,7 @@
     <description>Hazelcast Integration</description>
     <properties>
         <java.version>17</java.version>
-        <hazelcast.version>5.0-BETA-1</hazelcast.version>
+        <hazelcast.version>4.2.8</hazelcast.version>
         <spring-integration-hazelcast.version>6.1.1</spring-integration-hazelcast.version>
         <spring-data-hazelcast.version>2.4.0</spring-data-hazelcast.version>
     </properties>
