--- a/kube/service-ingress.yaml
+++ b/kube/service-ingress.yaml
@@ -2,19 +2,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: datagrid-service-ingress
+  name: datagrid
+  namespace: develop
+  labels:
+    app: datagrid
 spec:
   ports:
   - name: http
     port: 80
     targetPort: 8080
+    protocol: TCP
   selector:
     app: datagrid
 ---
-apiVersion: getambassador.io/v2
-kind: Mapping
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: datagrid-backend
+  name: datagrid-service-ingress
+  namespace: develop
 spec:
-  prefix: /datagrid/
-  service: datagrid-service-ingress
+  rules:
+  - host: datagrid.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: datagrid
+            port:
+              number: 80
+  ingressClassName: nginx
