--- a/kube/service.yaml
+++ b/kube/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: datagrid-service
+  namespace: develop
 spec:
   type: ClusterIP
   clusterIP: None
